Se actualiza la version de Android en Google Play. Se arregla bug al cargar fecha de cumpleaños. Se sube la keystore(clave unica para generar el release en Android, contraseña: Password225). El keystore debe se depositado en la carpeta raiz del proyecto phonegap

--- a/EduClass.WebApi/WebApiAndroid/www/UserEdit.html
+++ b/EduClass.WebApi/WebApiAndroid/www/UserEdit.html
@@ -364,7 +364,16 @@
            var day = fecha.getDate();
            var monthIndex = fecha.getMonth() + 1 ;
            var year = fecha.getFullYear();
+           if(monthIndex < 10)
+           {
+                monthIndex = "0"+monthIndex;
+           }
+           if(day < 10)
+           {
+                day = "0"+day;
+           }
            var fechaFormateada = year+"-"+monthIndex+ "-"+day;
+           
            
            $('#datepicker').val(fechaFormateada);
 
