--- a/EduClass.WebApi/WebApiAndroid/www/Register.html
+++ b/EduClass.WebApi/WebApiAndroid/www/Register.html
@@ -161,7 +161,7 @@
                 <hr class="invisible">
 
                 <div class="form-group">
-                    <a href="@Url.Action("SignIn", "Users")" class="btn btn-default btn-quirk btn-stroke btn-stroke-thin btn-block btn-sign">¿Ya tienes una cuenta? Inicia sesión!</a>
+                    <a href="SignIn.html" class="btn btn-default btn-quirk btn-stroke btn-stroke-thin btn-block btn-sign">¿Ya tienes una cuenta? Inicia sesión!</a>
                 </div>
             </div><!-- sign-sidebar -->
         </div>
